some more minor changes, still need to put more comments and figure out view bag issue. Should be okay enough though

--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -6,5 +6,6 @@
 }
 @model JoelHiltonFilms.Models.Movie
 
+ 
 <h2 class="text-center">Your movie has been entered</h2>
-<button class="btn-primary" \><a asp-action="AllMovies" style="color:white;">View Movies</a></button>
+<button class="btn-primary justify-content-sm-center" \><a asp-action="AllMovies" style="color:white;">View Movies</a></button>
