--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,3 +5,6 @@
 <div>
     <img class="img" src="~/img/JoelHilton.jpg" />
 </div>
+<div>
+    <h2 class="text-center">Joel Hilton Film Collection</h2>
+</div>
