--- a/Views/Home/NewMovie.cshtml
+++ b/Views/Home/NewMovie.cshtml
@@ -15,15 +15,15 @@
         <option>Miscellaneous</option>
         <option>Television</option>
         <option>VHS</option>
-    </select>
+    </select><br />
     <label for="title" asp-for="title">Title: </label>
-    <input type="text" id="title" asp-for="title" />
+    <input type="text" id="title" asp-for="title" /><br />
 
     <label for="year" asp-for="year">Year: </label>
-    <input type="text" id="year" asp-for="year" />
+    <input type="text" id="year" asp-for="year" /><br />
 
     <label for="director" asp-for="director">Director: </label>
-    <input type="text" id="director" asp-for="director" />
+    <input type="text" id="director" asp-for="director" /><br />
 
     <label for="rating" asp-for="rating">Rating: </label>
     <select id="rating" asp-for="rating">
@@ -37,19 +37,19 @@
         <option value="TV-PG">TV-PG</option>
         <option value="TV-14">TV-14</option>
         <option value="TV-MA">TV-MA</option>
-    </select>
+    </select><br />
 
     <label for="edited" asp-for="edited">Edited: </label>
     <select asp-for="edited">
         <option value="true">Yes</option>
         <option value="false">No</option>
-    </select>
+    </select><br />
 
     <label for="lentTo" asp-for="lentTo">Lent to: </label>
-    <input type="text" id="lentTo" asp-for="lentTo" />
+    <input type="text" id="lentTo" asp-for="lentTo" /><br />
 
     <label for="notes" asp-for="notes">Notes: </label>
-    <input type="text" rows="3" id="notes" asp-for="notes" />
+    <input type="text" rows="3" id="notes" asp-for="notes" /><br />
     
 
     <button type="submit">Submit</button>
