moved button to center

--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -8,4 +8,6 @@
 
  
 <h2 class="text-center">Your movie has been entered</h2>
-<button class="btn-primary justify-content-sm-center" \><a asp-action="AllMovies" style="color:white;">View Movies</a></button>
+<div style="height: 200px; position: relative;">
+    <button class="btn-primary justify-content-sm-center" \><a asp-action="AllMovies" style="color:white;">View Movies</a></button>
+</div>
