--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - JoelHiltonFilms</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
     <header>
+        <!--Navbar-->
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JoelHiltonFilms</a>
@@ -38,15 +41,17 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <!--Body goes here-->
             @RenderBody()
         </main>
     </div>
-
+    <!--footer-->
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - JoelHiltonFilms
         </div>
     </footer>
+    <!--brings in  scripts-->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
