--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -2,12 +2,22 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    
 }
 @model JoelHiltonFilms.Models.Movie
 
- 
-<h2 class="text-center">Your movie has been entered</h2>
-<div style="height: 200px; position: relative;">
-    <button class="btn-primary justify-content-sm-center" \><a asp-action="AllMovies" style="color:white;">View Movies</a></button>
-</div>
+<h2 class="text-center">
+    @if (Model.title != "Independence Day")
+    {
+        @:Your movie has been entered
+
+
+    }
+    else
+    {
+        @:Your movie has not been entered because Rocky IV is the most American movie ever
+    }
+</h2>
+
+    <div style="display: flex; justify-content: center; align-items: center; height: 200px;">
+        <a asp-action="AllMovies"><input type="button" value="View All Movies" class="btn-primary" /></a>
+    </div>
