Everything for assignment 9

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div>
-    <img class="img" src="~/img/JoelHilton.jpg" />
-</div>
-<div>
-    <h2 class="text-center">Joel Hilton Film Collection</h2>
+<div class="w3-card-4 w3-center" style="width:50%">
+    <img  src="~/img/JoelHilton.jpg" style="width:100%"/>
+    <div class="w3-container w3-center">
+        <h2 class="text-center">Joel Hilton Film Collection</h2>
+    </div>
 </div>
