--- a/Views/Home/AllMovies.cshtml
+++ b/Views/Home/AllMovies.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 
-@model IEnumerable<JoelHiltonFilms.Models.Movie>
+@model IEnumerable<Movie>
     <!--Table-->
     <div>
         <table class="w3-table w3-striped w3-bordered">
@@ -18,14 +18,14 @@
                     <th>Edited</th>
                     <th>Lent To</th>
                     <th>Notes</th>
+                    <th></th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 <!--iterates through each movie and writes to HTML except Indepenndence Day-->
-                @foreach (JoelHiltonFilms.Models.Movie movie in Model)
+                @foreach (Movie movie in Model)
                 {
-                    if (movie.title.ToLower() != "independence day")
-                    {
                         <tr>
                             <td>@movie.category</td>
                             <td>@movie.title</td>
@@ -35,8 +35,20 @@
                             <td>@movie.edited</td>
                             <td>@movie.lentTo</td>
                             <td>@movie.notes</td>
+                            <td>
+                                <form asp-action="Edit" method="get" class="">
+                                    <input type="hidden" name="movieId" value="@movie.movieId" />
+                                    <button type="submit" name="edit" class="btn btn-outline-primary shadow">Edit</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form asp-action="Delete" method="post" class="">
+                                    <input type="hidden" name="movieId" value="@movie.movieId" />
+                                    <button type="submit" name="delete" class="btn btn-outline-primary shadow">Delete</button>
+                                </form>
+                            </td>
                         </tr>
-                    }
+                  
                 }
 
             </tbody>
