--- a/Views/Home/NewMovie.cshtml
+++ b/Views/Home/NewMovie.cshtml
@@ -6,9 +6,9 @@
 }
 @model JoelHiltonFilms.Models.Movie
 <!--form for entering new movies-->
-<form asp-action="NewMovie" method="post">
+<form asp-action="NewMovie" method="post" class="w3-container w3-card-4 w3-light-grey">
     <label for="category" asp-for="category">Category: </label>
-    <select id="category" asp-for="category">
+    <select id="category" asp-for="category" class="w3-input w3-border w3-round">
         <option>Action/Adventure</option>
         <option>Comedy</option>
         <option>Drama</option>
@@ -19,16 +19,16 @@
         <option>VHS</option>
     </select><br />
     <label for="title" asp-for="title">Title: </label>
-    <input type="text" id="title" asp-for="title" /><br />
+    <input type="text" id="title" asp-for="title" class="w3-input w3-border w3-round"/><br />
 
     <label for="year" asp-for="year">Year: </label>
-    <input type="text" id="year" asp-for="year" /><br />
+    <input type="text" id="year" asp-for="year" class="w3-input w3-border w3-round"/><br />
 
     <label for="director" asp-for="director">Director: </label>
-    <input type="text" id="director" asp-for="director" /><br />
+    <input type="text" id="director" asp-for="director" class="w3-input w3-border w3-round"/><br />
 
     <label for="rating" asp-for="rating">Rating: </label>
-    <select id="rating" asp-for="rating">
+    <select id="rating" asp-for="rating" class="w3-input w3-border w3-round">
         <option value="G">G</option>
         <option value="PG">PG</option>
         <option value="PG-13">PG-13</option>
@@ -42,19 +42,19 @@
     </select><br />
 
     <label for="edited" asp-for="edited">Edited: </label>
-    <select asp-for="edited">
+    <select asp-for="edited" class="w3-input w3-border w3-round">
         <option value="true">Yes</option>
         <option value="false">No</option>
     </select><br />
 
     <label for="lentTo" asp-for="lentTo">Lent to: </label>
-    <input type="text" id="lentTo" asp-for="lentTo" /><br />
+    <input type="text" id="lentTo" asp-for="lentTo" class="w3-input w3-border w3-round"/><br />
 
     <label for="notes" asp-for="notes">Notes: </label>
-    <input type="text" rows="3" id="notes" asp-for="notes" /><br />
+    <input type="text" rows="5" id="notes" asp-for="notes" class="w3-input w3-border w3-round"/><br />
 
 
-    <input type="submit" />
+    <input type="submit"  value="Submit" class="btn btn-outline-primary shadow"/>
     <!--puts out warnings if fields aren't entered-->
     <div asp-validation-summary="All"></div>
 </form>
