--- a/Views/Home/Podcasts.cshtml
+++ b/Views/Home/Podcasts.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
 }
+<!--For Podcasts-->
 <div class="w3-card-4 w3-center" style="width:50%">
     <a href="https://baconsale.com/">
         <img src="~/img/baconsale3.png" style="width:80%; padding-top:10px;" />
